add og image & meta

--- a/index.html
+++ b/index.html
@@ -4,13 +4,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
-    <title>LINE Sawasdee Studio</title>
+    <title>Sawasdee Studio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400..700&display=swap"
       rel="stylesheet"
     />
+    <meta property="og:url" content="https://line-sawasdee.iamprompt.me" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Sawasdee Studio" />
+    <meta
+      property="og:description"
+      content="ส่งความสุขผ่าน LINE รูปแบบใหม่ ลืมไปเลยว่าส่งได้แค่ข้อความ"
+    />
+    <meta
+      property="og:image"
+      content="https://line-sawasdee.iamprompt.me/og.jpg"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@iamprompt" />
+    <meta name="twitter:creator" content="@iamprompt" />
   </head>
   <body>
     <div id="root"></div>
